# sentry-rust

./: Cargo.toml  README.md
sentry/: Cargo.toml
sentry-actix/: Cargo.toml
sentry-actix/examples/: basic.rs
sentry-actix/src/: lib.rs
sentry-anyhow/: Cargo.toml
sentry-anyhow/src/: lib.rs
sentry-backtrace/: Cargo.toml
sentry-contexts/: Cargo.toml
sentry-contexts/src/: lib.rs
sentry-core/: Cargo.toml
sentry-core/src/scope/: real.rs
sentry-debug-images/: Cargo.toml
sentry-debug-images/src/: lib.rs
sentry-error-chain/: Cargo.toml
sentry-error-chain/src/: lib.rs
sentry-failure/: Cargo.toml
sentry-failure/src/: lib.rs
sentry-log/: Cargo.toml
sentry-log/src/: lib.rs
sentry-panic/: Cargo.toml
sentry-panic/src/: lib.rs
sentry-slog/: Cargo.toml
sentry-slog/src/: converters.rs  drain.rs  lib.rs
sentry-types/: Cargo.toml
sentry-types/src/: lib.rs
sentry-types/tests/: test_auth.rs  test_protocol_v7.rs
sentry/examples/: anyhow-demo.rs  before-send.rs  error-chain-demo.rs  event-processors.rs  failure-demo.rs  health.rs  log-demo.rs  message-demo.rs  panic-demo.rs  send-with-extra.rs  thread-demo.rs
sentry/src/: defaults.rs  init.rs  lib.rs
sentry/tests/: test_async.rs  test_basic.rs  test_client.rs  test_log.rs  test_processors.rs
src/scope/: real.rs
