[package]
name = "sentry-actix"
version = "0.21.0"
authors = ["Sentry <hello@sentry.io>", "Nervos Core Dev <dev@nervos.org>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nervosnetwork/sentry-rust"
description = """
Sentry client extension for actix-web 3.
"""
edition = "2018"

[dependencies]
sentry-core = { package = "ckb-sentry-core", version = "0.21.0", path = "../sentry-core", default-features = false }
actix-web = { version = "3", default-features = false }
futures-util = "0.3.5"

[dev-dependencies]
sentry = { package = "ckb-sentry", version = "0.21.0", path = "../sentry", default-features = false, features = ["test"] }
actix-rt = "1.1.1"
futures = "0.3"
