[package]
name = "ckb-sentry-anyhow"
version = "0.21.0"
authors = ["Sentry <hello@sentry.io>", "Nervos Core Dev <dev@nervos.org>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nervosnetwork/sentry-rust"
description = """
Sentry integration for anyhow.
"""
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
sentry-core = { package = "ckb-sentry-core", version = "0.21.0", path = "../sentry-core" }
anyhow = "1.0.30"

[dev-dependencies]
sentry = { package = "ckb-sentry", version = "0.21.0", path = "../sentry", default-features = false, features = ["test"] }
