[package]
name = "ckb-sentry-contexts"
version = "0.21.0"
authors = ["Sentry <hello@sentry.io>", "Nervos Core Dev <dev@nervos.org>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nervosnetwork/sentry-rust"
description = """
Sentry integration for os, device, and rust contexts.
"""
build = "build.rs"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
sentry-core = { package = "ckb-sentry-core", version = "0.21.0", path = "../sentry-core" }
libc = "0.2.66"
hostname = "0.3.0"
regex = "1.3.4"
lazy_static = "1.4.0"

[target."cfg(not(windows))".dependencies]
uname = "0.1.1"

[build-dependencies]
rustc_version = "0.2.3"

[dev-dependencies]
sentry = { package = "ckb-sentry", version = "0.21.0", path = "../sentry", default-features = false, features = ["test"] }
