[package]
name = "ckb-sentry-failure"
version = "0.21.0"
authors = ["Sentry <hello@sentry.io>", "Nervos Core Dev <dev@nervos.org>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nervosnetwork/sentry-rust"
description = """
Sentry integration for failure crate.
"""
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
sentry-core = { package = "ckb-sentry-core", version = "0.21.0", path = "../sentry-core" }
sentry-backtrace = { package = "ckb-sentry-backtrace", version = "0.21.0", path = "../sentry-backtrace" }
failure = "0.1.6"

[dev-dependencies]
sentry = { package = "ckb-sentry", version = "0.21.0", path = "../sentry", default-features = false, features = ["test"] }
sentry-panic = { package = "ckb-sentry-panic", version = "0.21.0", path = "../sentry-panic" }
