[package]
name = "ckb-sentry-log"
version = "0.21.0"
authors = ["Sentry <hello@sentry.io>", "Nervos Core Dev <dev@nervos.org>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nervosnetwork/sentry-rust"
description = """
Sentry integration for log and env_logger crates.
"""
edition = "2018"

[dependencies]
sentry-core = { package = "ckb-sentry-core", version = "0.21.0", path = "../sentry-core" }
log = { version = "0.4.8", features = ["std"] }

[dev-dependencies]
sentry = { package = "ckb-sentry", version = "0.21.0", path = "../sentry", default-features = false, features = ["test"] }
pretty_env_logger = "0.4.0"
