[package]
name = "ckb-sentry-slog"
version = "0.21.0"
authors = ["Sentry <hello@sentry.io>", "Nervos Core Dev <dev@nervos.org>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nervosnetwork/sentry-rust"
description = """
Sentry integration for the slog crate.
"""
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
sentry-core = { package = "ckb-sentry-core", version = "0.21.0", path = "../sentry-core" }
slog = "2.5.2"

[dev-dependencies]
sentry = { package = "ckb-sentry", version = "0.21.0", path = "../sentry", default-features = false, features = ["test"] }
